--- a/accounts/templates/accounts/user_register.html
+++ b/accounts/templates/accounts/user_register.html
@@ -3,7 +3,7 @@
 {% block body %}
         <h1> User_Register </h1>
 
-    <form method="post">
+    <form method="post" novalidate>
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">ثبت نام</button>
