--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css">
     <title>
         {% block title %}{%  endblock %}
     </title>
 </head>
 <body>
+    {% include 'navbar.html' %}
+    {% include 'messages.html' %}
     {% block body %}{% endblock %}
 </body>
 </html>
