--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% if messages %}
+    {%  for msg in messages %}
+        <h3 {% if msg.tags %} class="alert alert-{{ msg.tags }}"{% endif %}>{{ msg }}</h3>
+    {% endfor %}
+{% endif %}
